# wasm-calc

./: .gitignore  Makefile  README.md  cabal.project  cabal.project.freeze  flake.nix  lsp-log.txt  nice.wasm
.github/workflows/: lint-haskell.yml  wasm-calc-haskell.yml
wasm-calc/: wasm-calc.cabal
wasm-calc/test/: Main.hs
wasm-calc1/: wasm-calc1.cabal
wasm-calc10/: wasm-calc10.cabal
wasm-calc10/src/Calc/: Build.hs  Dependencies.hs  ExprUtils.hs  Module.hs  Parser.hs  PrettyPrint.hs  Repl.hs  Types.hs
wasm-calc10/src/Calc/Ability/: Check.hs
wasm-calc10/src/Calc/Linearity/: Decorate.hs  Types.hs  Validate.hs
wasm-calc10/src/Calc/Parser/: Data.hs  Expr.hs  Identifier.hs  Module.hs  Pattern.hs  Type.hs  Types.hs
wasm-calc10/src/Calc/Typecheck/: Elaborate.hs  Error.hs  Exhaustiveness.hs  Helpers.hs  Infer.hs  Patterns.hs  Types.hs
wasm-calc10/src/Calc/Typecheck/Error/: TypeError.hs
wasm-calc10/src/Calc/Typecheck/Patterns/: Annihilate.hs  Generate.hs  Validate.hs
wasm-calc10/src/Calc/Types/: Ability.hs  Data.hs  DataName.hs  Expr.hs  Global.hs  Module.hs  Pattern.hs  Type.hs
wasm-calc10/src/Calc/Wasm/FromExpr/: Expr.hs  Helpers.hs  Patterns.hs
wasm-calc10/src/Calc/Wasm/FromExpr/Patterns/: Paths.hs  Predicates.hs
wasm-calc10/src/Calc/Wasm/ToWasm/: Expr.hs  Types.hs
wasm-calc10/static/: .gitignore  malloc-new.wat  malloc.wasm
wasm-calc10/test/: Main.hs
wasm-calc10/test/Test/: Helpers.hs
wasm-calc10/test/Test/Ability/: AbilitySpec.hs
wasm-calc10/test/Test/Linearity/: LinearitySpec.hs
wasm-calc10/test/Test/Parser/: ParserSpec.hs
wasm-calc10/test/Test/PrettyPrint/: PrettyPrintSpec.hs
wasm-calc10/test/Test/Typecheck/: ExhaustivenessSpec.hs  PatternsSpec.hs  TypecheckSpec.hs
wasm-calc10/test/Test/Wasm/: FromWasmSpec.hs  WasmSpec.hs
wasm-calc10/test/output/: -5281840598447118423.wasm  5670610356297281675.wasm  5994151715687635281.wasm  7155520643672546399.wasm
wasm-calc10/test/static/: noalloc.calc
wasm-calc11/: wasm-calc11.cabal
wasm-calc11/app/: Main.hs
wasm-calc11/demo/: .gitignore  calc-project.json  draw.calc
wasm-calc11/src/: Calc.hs
wasm-calc11/static/: .gitignore  malloc.calc  malloc.wasm
wasm-calc12/: wasm-calc12.cabal
wasm-calc12/demo/: draw.calc  draw.html
wasm-calc12/src/: Calc.hs
wasm-calc2/: wasm-calc2.cabal
wasm-calc2/src/Calc/: Repl.hs
wasm-calc2/src/Calc/Typecheck/: Error.hs
wasm-calc2/src/Calc/Wasm/: Run.hs
wasm-calc2/test/Test/Wasm/: WasmSpec.hs
wasm-calc3/: wasm-calc3.cabal
wasm-calc3/test/: Main.hs
wasm-calc4/: wasm-calc4.cabal
wasm-calc4/src/: Calc.hs
wasm-calc4/test/: Main.hs
wasm-calc5/: wasm-calc5.cabal
wasm-calc6/: wasm-calc6.cabal
wasm-calc6/static/: bump-allocator.wat
wasm-calc6/test/: Main.hs
wasm-calc7/: wasm-calc7.cabal
wasm-calc7/app/: Main.hs
wasm-calc7/demo/: README.md  draw.calc  draw.html
wasm-calc7/src/: Calc.hs
wasm-calc7/src/Calc/: Build.hs  Interpreter.hs  Linearity.hs  PrettyPrint.hs  Repl.hs  Types.hs  Wasm.hs
wasm-calc7/src/Calc/Linearity/: Error.hs  Validate.hs
wasm-calc7/src/Calc/Parser/: Expr.hs  Function.hs  Identifier.hs  Import.hs  Module.hs  Pattern.hs  Primitives.hs  Type.hs
wasm-calc7/src/Calc/Typecheck/: Elaborate.hs  Error.hs  Generalise.hs  Substitute.hs
wasm-calc7/src/Calc/Types/: Expr.hs  Function.hs  Import.hs  Module.hs  Prim.hs  Type.hs  TypeVar.hs
wasm-calc7/src/Calc/Wasm/: FromExpr.hs  Helpers.hs  Patterns.hs  Run.hs  ToWasm.hs  Types.hs  WriteModule.hs
wasm-calc7/test/: Main.hs
wasm-calc7/test/Test/: Helpers.hs  RunNode.hs
wasm-calc7/test/Test/Interpreter/: InterpreterSpec.hs
wasm-calc7/test/Test/Linearity/: LinearitySpec.hs
wasm-calc7/test/Test/Parser/: ParserSpec.hs
wasm-calc7/test/Test/PrettyPrint/: PrettyPrintSpec.hs
wasm-calc7/test/Test/Typecheck/: TypecheckSpec.hs
wasm-calc7/test/Test/Wasm/: WasmSpec.hs
wasm-calc7/test/output/: -1239577046139141932.wasm  -1973119384753339960.wasm  -2323103748437649950.wasm  -2417262206488624360.wasm  -2888050933866766591.wasm  -370422601035086076.wasm  -4138179685957011920.wasm  -4597904435544001656.wasm  -573383203981236551.wasm  -6045349615229031457.wasm  -6977270111615835228.wasm  -7001000226628084749.wasm  -8245959395296717870.wasm  -8298270216316276863.wasm  -9202988938308766336.wasm  -9215194674672913084.wasm  .gitignore  1130644953598148756.wasm  1218023668216569265.wasm  1846673439504281563.wasm  2147609323400279324.wasm  4181703513898670738.wasm  504667203611690375.wasm  5390013009622590977.wasm  5702128724327189119.wasm  5847857864350335952.wasm  7016255238829523972.wasm  7876073467870916921.wasm  8074397317379534936.wasm  8346899881611507463.wasm  8753444485115242548.wasm  8861957194876601322.wasm  9159624059895006926.wasm  draw.calc  draw.html  test.mjs  test.wasm  test.wat
wasm-calc7/test/static/: bigfunction.calc  drawing.calc
wasm-calc8/: wasm-calc8.cabal
wasm-calc8/src/Calc/: Build.hs  ExprUtils.hs  PrettyPrint.hs  Repl.hs  Typecheck.hs
wasm-calc8/src/Calc/Linearity/: Types.hs
wasm-calc8/src/Calc/Parser/: Expr.hs  Function.hs  Identifier.hs  Module.hs  Primitives.hs  Type.hs  Types.hs
wasm-calc8/src/Calc/Typecheck/: Elaborate.hs  Error.hs  Generalise.hs  Helpers.hs  Infer.hs  Types.hs
wasm-calc8/src/Calc/Types/: Expr.hs  Function.hs  Global.hs  Memory.hs  Module.hs  Op.hs  Prim.hs  Type.hs
wasm-calc8/src/Calc/Wasm/: Allocator.hs  FromExpr.hs  Helpers.hs  Run.hs  ToWasm.hs  Types.hs
wasm-calc8/src/Calc/Wasm/FromExpr/: Expr.hs  Helpers.hs  Types.hs
wasm-calc8/src/Calc/Wasm/ToWasm/: Expr.hs  Helpers.hs  Module.hs  Types.hs
wasm-calc8/static/: bump-allocator.wat  malloc.wat  yolo.wat
wasm-calc8/test/Test/: Helpers.hs  RunNode.hs
wasm-calc8/test/Test/Linearity/: LinearitySpec.hs
wasm-calc8/test/Test/Parser/: ParserSpec.hs
wasm-calc8/test/Test/Typecheck/: TypecheckSpec.hs
wasm-calc8/test/Test/Wasm/: WasmSpec.hs
wasm-calc8/test/output/: test.mjs
wasm-calc8/test/static/: bigfunction.calc  drawing.calc
wasm-calc9/: wasm-calc9.cabal
wasm-calc9/demo/: draw.calc
wasm-calc9/static/: .gitignore  malloc-new.wat  malloc.calc  (+2 more)
(+265 files in other folders)
