cabal-version:      2.4
name:               wasm-calc2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Harvey
maintainer:         danieljamesharvey@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall
    -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

  build-depends:
    , base
    , containers
    , diagnose
    , haskeline
    , megaparsec
    , mtl
    , parser-combinators
    , prettyprinter
    , text
    , wasm

  other-modules:
    Calc
    Calc.ExprUtils
    Calc.Interpreter
    Calc.Parser
    Calc.Parser.Expr
    Calc.Parser.Primitives
    Calc.Parser.Shared
    Calc.Parser.Type
    Calc.Parser.Types
    Calc.Repl
    Calc.SourceSpan
    Calc.Typecheck.Elaborate
    Calc.Typecheck.Error
    Calc.Types
    Calc.Types.Annotation
    Calc.Types.Expr
    Calc.Types.Prim
    Calc.Types.Type
    Calc.TypeUtils
    Calc.Wasm.FromExpr
    Calc.Wasm.Run
    Calc.Wasm.Types

library
  import:           shared

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite wasm-calc2-tests
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  hs-source-dirs:   src
  build-depends:
    , hspec       >=2.8.3 && <3
    , hspec-core  >=2.8.3 && <3

  other-modules:
    Test.Interpreter.InterpreterSpec
    Test.Parser.ParserSpec
    Test.Typecheck.TypecheckSpec
    Test.Wasm.WasmSpec

  main-is:          Main.hs
  default-language: Haskell2010

executable wasm-calc2
  main-is:          Main.hs
  hs-source-dirs:   app
  hs-source-dirs:   src
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , diagnose
    , haskeline
    , megaparsec
    , mtl
    , parser-combinators
    , prettyprinter
    , text
    , wasm
    , wasm-calc2

  default-language: Haskell2010
